// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`runServer should authenticate users 1`] = `
Object {
  "data": Object {
    "transactions": Object {
      "2": Object {
        "errored": false,
        "id": "2",
        "ip": "127.0.0.1",
        "method": "GET",
        "protocol": "http",
        "reqHeaders": Object {
          "accept": "application/json, text/plain, */*",
          "accept-encoding": "gzip, deflate",
          "accept-language": "en",
          "authorization": "Fake 1-admin",
          "connection": "close",
          "host": "localhost:9999",
          "origin": "http://localhost",
          "referer": "http://localhost/",
          "user-agent": "Mozilla/5.0 (linux) AppleWebKit/537.36 (KHTML, like Gecko) jsdom/11.12.0",
        },
        "startInBytes": 331,
        "startOutBytes": 0,
        "startTime": 1390694400000,
        "url": "/v4/diag",
      },
    },
  },
  "debugCalls": Array [
    Array [
      "Created a delay:",
      30000,
    ],
    Array [
      "🔓 - Public endpoint detected, letting the call pass through!",
    ],
    Array [
      "Cleared a delay",
    ],
    Array [
      "Created a delay:",
      30000,
    ],
    Array [
      "Cleared a delay",
    ],
  ],
  "headers": Object {
    "content-type": "application/json",
    "date": undefined,
  },
  "logErrorCalls": Array [],
  "logInfoCalls": Array [
    Array [
      Object {
        "endInBytes": 284,
        "endOutBytes": 377,
        "endTime": 1390694400000,
        "errored": false,
        "id": "1",
        "ip": "127.0.0.1",
        "method": "OPTIONS",
        "protocol": "http",
        "reqHeaders": Object {
          "access-control-request-headers": "authorization",
          "access-control-request-method": "GET",
          "connection": "close",
          "content-length": "0",
          "host": "localhost:9999",
          "origin": "http://localhost",
          "user-agent": "Mozilla/5.0 (linux) AppleWebKit/537.36 (KHTML, like Gecko) jsdom/11.12.0",
        },
        "resHeaders": Object {
          "Access-Control-Allow-Headers": "Accept,Accept-Encoding,Accept-Language,Referrer,Content-Type,Content-Encoding,Authorization,Keep-Alive,User-Agent",
          "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,OPTIONS",
          "Access-Control-Allow-Origin": "*",
          "Vary": "Origin",
        },
        "startInBytes": 284,
        "startOutBytes": 0,
        "startTime": 1390694400000,
        "statusCode": 200,
        "url": "/v4/diag",
      },
    ],
    Array [
      Object {
        "endInBytes": 331,
        "endOutBytes": 1001,
        "endTime": 1390694400000,
        "errored": false,
        "id": "2",
        "ip": "127.0.0.1",
        "method": "GET",
        "protocol": "http",
        "reqHeaders": Object {
          "accept": "application/json, text/plain, */*",
          "accept-encoding": "gzip, deflate",
          "accept-language": "en",
          "authorization": "Fake 1-admin",
          "connection": "close",
          "host": "localhost:9999",
          "origin": "http://localhost",
          "referer": "http://localhost/",
          "user-agent": "Mozilla/5.0 (linux) AppleWebKit/537.36 (KHTML, like Gecko) jsdom/11.12.0",
        },
        "resHeaders": Object {
          "Access-Control-Allow-Headers": "Accept,Accept-Encoding,Accept-Language,Referrer,Content-Type,Content-Encoding,Authorization,Keep-Alive,User-Agent",
          "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,OPTIONS",
          "Access-Control-Allow-Origin": "*",
          "Vary": "Origin",
          "X-Authenticated": "{\\"hash\\":\\"1-admin\\",\\"userId\\":1,\\"scopes\\":[\\"admin\\"]}",
          "content-type": "application/json",
        },
        "startInBytes": 331,
        "startOutBytes": 0,
        "startTime": 1390694400000,
        "statusCode": 200,
        "url": "/v4/diag",
      },
    ],
  ],
  "status": 200,
}
`;

exports[`runServer should fail with bad fake tokens 1`] = `
Object {
  "data": Object {
    "error": Object {
      "code": "E_INVALID_FAKE_TOKEN",
      "guruMeditation": "4",
    },
  },
  "debugCalls": Array [
    Array [
      "Created a delay:",
      30000,
    ],
    Array [
      "🔓 - Public endpoint detected, letting the call pass through!",
    ],
    Array [
      "Cleared a delay",
    ],
    Array [
      "Created a delay:",
      30000,
    ],
    Array [
      "Cleared a delay",
    ],
  ],
  "headers": Object {
    "cache-control": "private",
    "content-type": "application/json",
    "date": undefined,
  },
  "logErrorCalls": Array [],
  "logInfoCalls": Array [
    Array [
      Object {
        "endInBytes": 284,
        "endOutBytes": 377,
        "endTime": 1390694400000,
        "errored": false,
        "id": "3",
        "ip": "127.0.0.1",
        "method": "OPTIONS",
        "protocol": "http",
        "reqHeaders": Object {
          "access-control-request-headers": "authorization",
          "access-control-request-method": "GET",
          "connection": "close",
          "content-length": "0",
          "host": "localhost:9999",
          "origin": "http://localhost",
          "user-agent": "Mozilla/5.0 (linux) AppleWebKit/537.36 (KHTML, like Gecko) jsdom/11.12.0",
        },
        "resHeaders": Object {
          "Access-Control-Allow-Headers": "Accept,Accept-Encoding,Accept-Language,Referrer,Content-Type,Content-Encoding,Authorization,Keep-Alive,User-Agent",
          "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,OPTIONS",
          "Access-Control-Allow-Origin": "*",
          "Vary": "Origin",
        },
        "startInBytes": 284,
        "startOutBytes": 0,
        "startTime": 1390694400000,
        "statusCode": 200,
        "url": "/v4/diag",
      },
    ],
    Array [
      Object {
        "endInBytes": 331,
        "endOutBytes": 510,
        "endTime": 1390694400000,
        "errored": true,
        "id": "4",
        "ip": "127.0.0.1",
        "method": "GET",
        "protocol": "http",
        "reqHeaders": Object {
          "accept": "application/json, text/plain, */*",
          "accept-encoding": "gzip, deflate",
          "accept-language": "en",
          "authorization": "Fake e-admin",
          "connection": "close",
          "host": "localhost:9999",
          "origin": "http://localhost",
          "referer": "http://localhost/",
          "user-agent": "Mozilla/5.0 (linux) AppleWebKit/537.36 (KHTML, like Gecko) jsdom/11.12.0",
        },
        "resHeaders": Object {
          "Access-Control-Allow-Headers": "Accept,Accept-Encoding,Accept-Language,Referrer,Content-Type,Content-Encoding,Authorization,Keep-Alive,User-Agent",
          "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,OPTIONS",
          "Access-Control-Allow-Origin": "*",
          "Vary": "Origin",
          "cache-control": "private",
          "content-type": "application/json",
        },
        "startInBytes": 331,
        "startOutBytes": 0,
        "startTime": 1390694400000,
        "statusCode": 400,
        "url": "/v4/diag",
      },
    ],
  ],
  "status": 400,
}
`;

exports[`runServer should ping 1`] = `
Object {
  "data": Object {
    "pong": "pong",
  },
  "debugCalls": Array [
    Array [
      "Created a delay:",
      30000,
    ],
    Array [
      "🔓 - Public endpoint detected, letting the call pass through!",
    ],
    Array [
      "Cleared a delay",
    ],
  ],
  "headers": Object {
    "content-type": "application/json",
    "date": undefined,
  },
  "logErrorCalls": Array [],
  "logInfoCalls": Array [
    Array [
      Object {
        "endInBytes": 302,
        "endOutBytes": 447,
        "endTime": 1390694400000,
        "errored": false,
        "id": "0",
        "ip": "127.0.0.1",
        "method": "GET",
        "protocol": "http",
        "reqHeaders": Object {
          "accept": "application/json, text/plain, */*",
          "accept-encoding": "gzip, deflate",
          "accept-language": "en",
          "connection": "close",
          "host": "localhost:9999",
          "origin": "http://localhost",
          "referer": "http://localhost/",
          "user-agent": "Mozilla/5.0 (linux) AppleWebKit/537.36 (KHTML, like Gecko) jsdom/11.12.0",
        },
        "resHeaders": Object {
          "Access-Control-Allow-Headers": "Accept,Accept-Encoding,Accept-Language,Referrer,Content-Type,Content-Encoding,Authorization,Keep-Alive,User-Agent",
          "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,OPTIONS",
          "Access-Control-Allow-Origin": "*",
          "Vary": "Origin",
          "X-Node-ENV": "test",
          "content-type": "application/json",
        },
        "startInBytes": 302,
        "startOutBytes": 0,
        "startTime": 1390694400000,
        "statusCode": 200,
        "url": "/v4/ping",
      },
    ],
  ],
  "status": 200,
}
`;

exports[`runServer should work 1`] = `
Object {
  "debugCalls": Array [
    Array [
      "Logging service initialized.",
    ],
    Array [
      "Delay service initialized.",
    ],
    Array [
      "🏭 - Initializing the CONFIGS service.",
    ],
    Array [
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    Array [
      "Plugin \\"@whook/cli\\" resolved to: /home/whoiam/projects/whook/packages/whook-cli/dist",
    ],
    Array [
      "Plugin \\"@whook/whook\\" resolved to: /home/whoiam/projects/whook/dist",
    ],
    Array [
      "💿 - Service \\"MAX_HEADERS_COUNT\\" not found in: /home/whoiam/projects/whook/packages/whook-example/src/services/MAX_HEADERS_COUNT",
    ],
    Array [
      "💿 - Service \\"MAX_HEADERS_COUNT\\" not found in: /home/whoiam/projects/whook/packages/whook-cli/dist/services/MAX_HEADERS_COUNT",
    ],
    Array [
      "💿 - Service \\"MAX_HEADERS_COUNT\\" not found in: /home/whoiam/projects/whook/dist/services/MAX_HEADERS_COUNT",
    ],
    Array [
      "💿 - Service \\"KEEP_ALIVE_TIMEOUT\\" not found in: /home/whoiam/projects/whook/packages/whook-example/src/services/KEEP_ALIVE_TIMEOUT",
    ],
    Array [
      "💿 - Service \\"KEEP_ALIVE_TIMEOUT\\" not found in: /home/whoiam/projects/whook/packages/whook-cli/dist/services/KEEP_ALIVE_TIMEOUT",
    ],
    Array [
      "💿 - Service \\"KEEP_ALIVE_TIMEOUT\\" not found in: /home/whoiam/projects/whook/dist/services/KEEP_ALIVE_TIMEOUT",
    ],
    Array [
      "💿 - Service \\"TIMEOUT\\" not found in: /home/whoiam/projects/whook/packages/whook-example/src/services/TIMEOUT",
    ],
    Array [
      "💿 - Service \\"TIMEOUT\\" not found in: /home/whoiam/projects/whook/packages/whook-cli/dist/services/TIMEOUT",
    ],
    Array [
      "💿 - Service \\"TIMEOUT\\" not found in: /home/whoiam/projects/whook/dist/services/TIMEOUT",
    ],
    Array [
      "💿 - Service \\"MAX_CONNECTIONS\\" not found in: /home/whoiam/projects/whook/packages/whook-example/src/services/MAX_CONNECTIONS",
    ],
    Array [
      "💿 - Service \\"MAX_CONNECTIONS\\" not found in: /home/whoiam/projects/whook/packages/whook-cli/dist/services/MAX_CONNECTIONS",
    ],
    Array [
      "💿 - Service \\"MAX_CONNECTIONS\\" not found in: /home/whoiam/projects/whook/dist/services/MAX_CONNECTIONS",
    ],
    Array [
      "💿 - Service \\"PROCESS_NAME\\" not found in: /home/whoiam/projects/whook/packages/whook-example/src/services/PROCESS_NAME",
    ],
    Array [
      "💿 - Service \\"PROCESS_NAME\\" not found in: /home/whoiam/projects/whook/packages/whook-cli/dist/services/PROCESS_NAME",
    ],
    Array [
      "💿 - Service \\"PROCESS_NAME\\" not found in: /home/whoiam/projects/whook/dist/services/PROCESS_NAME",
    ],
    Array [
      "💿 - Service \\"SIGNALS\\" not found in: /home/whoiam/projects/whook/packages/whook-example/src/services/SIGNALS",
    ],
    Array [
      "💿 - Service \\"SIGNALS\\" not found in: /home/whoiam/projects/whook/packages/whook-cli/dist/services/SIGNALS",
    ],
    Array [
      "💿 - Service \\"SIGNALS\\" not found in: /home/whoiam/projects/whook/dist/services/SIGNALS",
    ],
    Array [
      "💿 - Service \\"BUFFER_LIMIT\\" not found in: /home/whoiam/projects/whook/packages/whook-example/src/services/BUFFER_LIMIT",
    ],
    Array [
      "💿 - Service \\"BUFFER_LIMIT\\" not found in: /home/whoiam/projects/whook/packages/whook-cli/dist/services/BUFFER_LIMIT",
    ],
    Array [
      "💿 - Service \\"BUFFER_LIMIT\\" not found in: /home/whoiam/projects/whook/dist/services/BUFFER_LIMIT",
    ],
    Array [
      "🚫 - Service \\"API\\" found in: /home/whoiam/projects/whook/packages/whook-example/src/services/API.js",
    ],
    Array [
      "💿 - Service \\"PARSERS\\" not found in: /home/whoiam/projects/whook/packages/whook-example/src/services/PARSERS",
    ],
    Array [
      "💿 - Service \\"PARSERS\\" not found in: /home/whoiam/projects/whook/packages/whook-cli/dist/services/PARSERS",
    ],
    Array [
      "💿 - Service \\"PARSERS\\" not found in: /home/whoiam/projects/whook/dist/services/PARSERS",
    ],
    Array [
      "💿 - Service \\"STRINGIFYERS\\" not found in: /home/whoiam/projects/whook/packages/whook-example/src/services/STRINGIFYERS",
    ],
    Array [
      "💿 - Service \\"STRINGIFYERS\\" not found in: /home/whoiam/projects/whook/packages/whook-cli/dist/services/STRINGIFYERS",
    ],
    Array [
      "💿 - Service \\"STRINGIFYERS\\" not found in: /home/whoiam/projects/whook/dist/services/STRINGIFYERS",
    ],
    Array [
      "💿 - Service \\"DECODERS\\" not found in: /home/whoiam/projects/whook/packages/whook-example/src/services/DECODERS",
    ],
    Array [
      "💿 - Service \\"DECODERS\\" not found in: /home/whoiam/projects/whook/packages/whook-cli/dist/services/DECODERS",
    ],
    Array [
      "💿 - Service \\"DECODERS\\" not found in: /home/whoiam/projects/whook/dist/services/DECODERS",
    ],
    Array [
      "💿 - Service \\"ENCODERS\\" not found in: /home/whoiam/projects/whook/packages/whook-example/src/services/ENCODERS",
    ],
    Array [
      "💿 - Service \\"ENCODERS\\" not found in: /home/whoiam/projects/whook/packages/whook-cli/dist/services/ENCODERS",
    ],
    Array [
      "💿 - Service \\"ENCODERS\\" not found in: /home/whoiam/projects/whook/dist/services/ENCODERS",
    ],
    Array [
      "💿 - Service \\"QUERY_PARSER\\" not found in: /home/whoiam/projects/whook/packages/whook-example/src/services/QUERY_PARSER",
    ],
    Array [
      "💿 - Service \\"QUERY_PARSER\\" not found in: /home/whoiam/projects/whook/packages/whook-cli/dist/services/QUERY_PARSER",
    ],
    Array [
      "💿 - Service \\"QUERY_PARSER\\" not found in: /home/whoiam/projects/whook/dist/services/QUERY_PARSER",
    ],
    Array [
      "💿 - Service \\"DEV_ACCESS_TOKEN\\" not found in: /home/whoiam/projects/whook/packages/whook-example/src/services/DEV_ACCESS_TOKEN",
    ],
    Array [
      "💿 - Service \\"DEV_ACCESS_TOKEN\\" not found in: /home/whoiam/projects/whook/packages/whook-cli/dist/services/DEV_ACCESS_TOKEN",
    ],
    Array [
      "💿 - Service \\"DEV_ACCESS_TOKEN\\" not found in: /home/whoiam/projects/whook/dist/services/DEV_ACCESS_TOKEN",
    ],
    Array [
      "💿 - Service \\"uniqueId\\" not found in: /home/whoiam/projects/whook/packages/whook-example/src/services/uniqueId",
    ],
    Array [
      "💿 - Service \\"uniqueId\\" not found in: /home/whoiam/projects/whook/packages/whook-cli/dist/services/uniqueId",
    ],
    Array [
      "💿 - Service \\"uniqueId\\" not found in: /home/whoiam/projects/whook/dist/services/uniqueId",
    ],
    Array [
      "💿 - Loading API initializer from /home/whoiam/projects/whook/packages/whook-example/src/services/API.js.",
    ],
    Array [
      "Running in \\"test\\" environment.",
    ],
    Array [
      "Process service initialized.",
    ],
    Array [
      "💱 - HTTP Transaction initialized.",
    ],
    Array [
      "🦄 - Initializing the API service!",
    ],
    Array [
      "🚫 - Service \\"getOpenAPIWrapped\\" found in: /home/whoiam/projects/whook/packages/whook-example/src/handlers/getOpenAPI.js",
    ],
    Array [
      "🚫 - Service \\"optionsWithCORSWrapped\\" found in: /home/whoiam/projects/whook/packages/whook-example/src/handlers/optionsWithCORS.js",
    ],
    Array [
      "💿 - Service \\"getPingWrapped\\" not found in: /home/whoiam/projects/whook/packages/whook-example/src/handlers/getPing",
    ],
    Array [
      "💿 - Service \\"getPingWrapped\\" not found in: /home/whoiam/projects/whook/packages/whook-cli/dist/handlers/getPing",
    ],
    Array [
      "🚫 - Service \\"getPingWrapped\\" found in: /home/whoiam/projects/whook/dist/handlers/getPing.js",
    ],
    Array [
      "🚫 - Service \\"getDelayWrapped\\" found in: /home/whoiam/projects/whook/packages/whook-example/src/handlers/getDelay.js",
    ],
    Array [
      "🚫 - Service \\"getDiagnosticWrapped\\" found in: /home/whoiam/projects/whook/packages/whook-example/src/handlers/getDiagnostic.js",
    ],
    Array [
      "🚫 - Service \\"getTimeWrapped\\" found in: /home/whoiam/projects/whook/packages/whook-example/src/handlers/getTime.js",
    ],
    Array [
      "🚫 - Service \\"putEchoWrapped\\" found in: /home/whoiam/projects/whook/packages/whook-example/src/handlers/putEcho.js",
    ],
    Array [
      "💿 - Loading getOpenAPIWrapped initializer from /home/whoiam/projects/whook/packages/whook-example/src/handlers/getOpenAPI.js.",
    ],
    Array [
      "💿 - Loading optionsWithCORSWrapped initializer from /home/whoiam/projects/whook/packages/whook-example/src/handlers/optionsWithCORS.js.",
    ],
    Array [
      "💿 - Loading getPingWrapped initializer from /home/whoiam/projects/whook/dist/handlers/getPing.js.",
    ],
    Array [
      "💿 - Loading getDelayWrapped initializer from /home/whoiam/projects/whook/packages/whook-example/src/handlers/getDelay.js.",
    ],
    Array [
      "💿 - Loading getDiagnosticWrapped initializer from /home/whoiam/projects/whook/packages/whook-example/src/handlers/getDiagnostic.js.",
    ],
    Array [
      "💿 - Loading getTimeWrapped initializer from /home/whoiam/projects/whook/packages/whook-example/src/handlers/getTime.js.",
    ],
    Array [
      "💿 - Loading putEchoWrapped initializer from /home/whoiam/projects/whook/packages/whook-example/src/handlers/putEcho.js.",
    ],
    Array [
      "🚫 - Service \\"WRAPPERS\\" found in: /home/whoiam/projects/whook/packages/whook-example/src/services/WRAPPERS.js",
    ],
    Array [
      "💿 - Loading WRAPPERS initializer from /home/whoiam/projects/whook/packages/whook-example/src/services/WRAPPERS.js.",
    ],
    Array [
      "🚫 - Service \\"MECHANISMS\\" found in: /home/whoiam/projects/whook/packages/whook-example/src/services/MECHANISMS.js",
    ],
    Array [
      "💿 - Service \\"DEFAULT_MECHANISM\\" not found in: /home/whoiam/projects/whook/packages/whook-example/src/services/DEFAULT_MECHANISM",
    ],
    Array [
      "💿 - Service \\"DEFAULT_MECHANISM\\" not found in: /home/whoiam/projects/whook/packages/whook-cli/dist/services/DEFAULT_MECHANISM",
    ],
    Array [
      "💿 - Service \\"DEFAULT_MECHANISM\\" not found in: /home/whoiam/projects/whook/dist/services/DEFAULT_MECHANISM",
    ],
    Array [
      "🚫 - Service \\"authentication\\" found in: /home/whoiam/projects/whook/packages/whook-example/src/services/authentication.js",
    ],
    Array [
      "💿 - Loading MECHANISMS initializer from /home/whoiam/projects/whook/packages/whook-example/src/services/MECHANISMS.js.",
    ],
    Array [
      "💿 - Loading authentication initializer from /home/whoiam/projects/whook/packages/whook-example/src/services/authentication.js.",
    ],
    Array [
      "🔧 - Initializing auth mechanisms",
    ],
    Array [
      "🔐 - Initializing the authorization wrapper for \\"getOpenAPI\\".",
    ],
    Array [
      "🔐 - Initializing the authorization wrapper for \\"optionsWithCORS\\".",
    ],
    Array [
      "🔐 - Initializing the authorization wrapper for \\"getPing\\".",
    ],
    Array [
      "🔐 - Initializing the authorization wrapper for \\"getDelay\\".",
    ],
    Array [
      "🔐 - Initializing the authorization wrapper for \\"getDiagnostic\\".",
    ],
    Array [
      "🔐 - Initializing the authorization wrapper for \\"getTime\\".",
    ],
    Array [
      "🔐 - Initializing the authorization wrapper for \\"putEcho\\".",
    ],
    Array [
      "🚦 - HTTP Router initialized.",
    ],
  ],
  "logErrorCalls": Array [
    Array [
      "⚡ - Loading configurations from /home/whoiam/projects/whook/packages/whook-example/src/config/test/config.",
    ],
    Array [
      "⚠️ - Using fake auth mechanism!",
    ],
    Array [
      "🎙️ - HTTP Server listening at \\"http://localhost:9999\\".",
    ],
    Array [
      "On air 🚀🌕",
    ],
  ],
  "logInfoCalls": Array [
    Array [
      "💁 - Serving the public API docs: http://localhost:9999/docs?url=http%3A%2F%2Flocalhost%3A9999%2Fv4%2FopenAPI",
    ],
  ],
}
`;
